More Geez and Hebrew words.

--- a/src/main/webapp/css/holyday.css
+++ b/src/main/webapp/css/holyday.css
@@ -93,7 +93,7 @@
   background-image: url(../images/holyday/day-of-atonement.jpeg);
   background-size: 100% 100%;
 }
-.calendar tbody .ng-scope.festival-booths {
+.calendar tbody .ng-scope.festival-sukkot {
   background-image: url(../images/holyday/our-tent.jpeg);
   background-size: 100% 100%;
 }
